--- a/Doit/app/src/main/res/layout/activity_main.xml
+++ b/Doit/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
         android:id="@+id/btn_test1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginBottom="192dp"
         android:text="Button1"
         android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/guideline1"
@@ -20,14 +20,15 @@
 
     <Button
         android:id="@+id/btn_test2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginBottom="32dp"
+        android:layout_width="143dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="204dp"
         android:text="Button2"
         android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/guideline1"
-        app:layout_constraintStart_toEndOf="@+id/btn_test1" />
+        app:layout_constraintStart_toEndOf="@+id/btn_test1"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn_test1"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
